...
                child: const Icon(Icons.shopping_cart),
              ),
              label: 'Cart',
            ),
            const BottomNavigationBarItem(
              icon: Icon(Icons.food_bank_rounded),
              label: 'Orders',
            ),
          ],
          currentIndex: _currentIndex,
          onTap: (index) {
            if (index == 1) {
              showModalBottomSheet(
...
              ),

        // Explore by Restaurant
        _isLoading
            ? _SliverRestaurantCardsSkeleton()
            : SliverRestaurantCards(
                headingTitle: 'Explore by Restaurant',
                items: exploreRestaurants,
                displayCount: 5,
                seeAll: true,
              ),

        // Top Rated
...
